/*
 * $Id: ChangeLog,v 1.4995 2006/06/07 12:33:48 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-06-07 16:35 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbrddcdx.h
  * xharbour/include/hbrdddbf.h
  * xharbour/source/rdd/dbcmd.c
  * xharbour/source/rdd/delim1.c
  * xharbour/source/rdd/dbffpt/dbffpt1.c
    * cleaned // comments and some compiler warnings

  * xharbour/include/dbinfo.ch
  * xharbour/source/rdd/dbf1.c
    ! fixed setting [V]FP DBF table type

2006-06-07 09:30 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/tget.prg
    ! fixed ParsePict() method to not avoid spaces after function symbom and
      before templates, in the mask. Thansks to Ed Horbino to report this bug.
    ! fixed Untransform() method to adjust correct return value in numeric get
      if var get is without picture and display buffer is empty.
    ! fixed Input() method to not allow input of "-" (minus sign) in numeric
      get after decimal dot, if any. Clipper allow it, but it's wrong.

2006-06-07 1:30 UTC+0100 Ath <Ath1 at sourceforge.net>
   * makefile.bc
     + added building usrrdd.lib and rdds.lib
   * set right local timezone offset for current changelog

2006-06-06 11:50 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
   * include/hbdefs.h
     * an old change for OS/2 .EXEs starting point which I've never
       commited up until now.
   * source/vm/Makefile
     * on OS/2 mainstd.c has to be built.

2006-06-06 09:58 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/filesys.c
     + added HB_OS2_IO sections to work around a GCC 'feature' on OS/2
       which makes it fail to open/create files on filesystems which do
       not support extended attributes (EAs).

2006-06-05 08:25 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>