@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4995 2006/06/07 12:33:48 modalsist Exp $
+ * $Id: ChangeLog,v 1.4996 2006/06/07 15:57:29 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,16 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-06-08 11:55 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
+  * xharbour/config/linux/gcc.cf
+    * added dl to linked library list
+
+  * xharbour/include/hbstack.h
+    * added parenthesis to hb_stackItem() macro
+
+  * xharbour/source/vm/hvm.c
+    ! fixed codeblock body cloning
 
 2006-06-07 16:35 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
   * xharbour/include/hbrddcdx.h
